--- a/monte-i/index.html
+++ b/monte-i/index.html
@@ -4,10 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>monte-i</title>
+  <title>Monte-i</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500;700&family=Source+Serif+4:opsz@8..60&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles/reset.css">
   <link rel="stylesheet" href="styles/style.css">
   <link rel="stylesheet" href="styles/slider.css">
   <link rel="stylesheet" href="styles/carousel.css">
@@ -299,7 +300,7 @@
 
           <div class="section_header">
             <h2 class="section__title">
-              <a href="">Авто и Мото</a></h2>
+              <a href="auto/auto_main.html">Авто и Мото</a></h2>
             <div class="section__items">
               <a class="section__item" id="cars" onclick="cars()">Автомобили</a>
               <a id="motob" class="section__item" onclick="motoc()">Мотоциклы</a>
