auto_ search_extra

--- a/monte-i/auto/auto_main.html
+++ b/monte-i/auto/auto_main.html
@@ -78,13 +78,14 @@
           </div><!--category__section-->
 
           <div class="auto__search">
-            <div class="search__item">
+
+            <div class="search__main">
               <div class="search__wripper">
 
                 <div class="search__widget">
                   <div class="widget">
                     <label for="brand_id">Марка</label>
-                    <select class="widget__opt" name="brand" id="brand_id">
+                    <select class="widget__input" name="brand" id="brand_id">
                       <option value="">---</option>
                       <option value="">Alfa Romeo</option>
                     </select>
@@ -94,7 +95,7 @@
                 <div class="search__widget">
                   <div class="widget">
                     <label for="model_id">Модель</label>
-                    <select class="widget__opt" name="model" id="model_id">
+                    <select class="widget__input" name="model" id="model_id">
                       <option  value="">---</option>
                       <option value="1">Land Cruiser</option>
                     </select>
@@ -104,7 +105,7 @@
                 <div class="search__widget">
                   <div class="widget">
                     <label for="carcase_id">Кузов</label>
-                    <select class="widget__opt" name="carcase" id="carcase_id">
+                    <select class="widget__input" name="carcase" id="carcase_id">
                       <option  value="">---</option>
                       <option value="1">Внедорожник</option>
                     </select>
@@ -116,40 +117,59 @@
                     <label for="date_id">Год выпуска</label>
                     <div>
                       <div class="awesomplete">
-                        <select class="widget__opt" name="carcase" id="carcase_id">
+                        <select class="widget__input widget-input_left" name="carcase" id="carcase_id">
                           <option  value="">---</option>
                           <option value="1">2000</option>
                         </select>
                       </div><!--awesomplete-->
                       <div class="awesomplete">
-                        <select class="widget__opt" name="carcase" id="carcase_id">
+                        <select class="widget__input widget-input_right" name="carcase" id="carcase_id">
                           <option  value="">---</option>
                           <option value="1">2023</option>
                         </select>
                       </div><!--awesomplete-->
                     </div>
                   </div>
-                </div><!--carcase-->
+                </div><!--date-->
 
                 <div class="search__widget">
                   <div class="widget">
-                    <label for="carcase_id">Цена</label>
-                    <div class="price_input">
+                    <label for="price_id">Цена</label>
+                    <div class="input__search">
                       <div class="awesomplete">
-                        <input placeholder="От" id="carcase_id" class="widget__opt">
-                        <ul role="listbox">
-                          <li></li>
-                        </ul>
+                        <input placeholder="От" id="price_id" class="widget__input widget-input_left" type="number" min="0">
                       </div>
                       <div class="awesomplete">
-                        <input placeholder="До"  id="carcase_id" class="widget__opt awesomplete">
+                        <input placeholder="До"  id="price_id" class="widget__input awesomplete widget-input_right" type="number" min="0">
                       </div>
                     </div>
                   </div>
-                </div><!--carcase-->
+                </div><!--price-->
                 
               </div><!--search__wripper-->
-            </div><!--search__item-->
+            </div><!--search__main-->
+
+
+            <!--extra__search
+            ==============================-->
+
+            <div class="extra__search">
+              <div class="extras">
+                <div class="search__widget">
+                  <div class="widget">
+                    <label for="power_id">Мощность</label>
+                    <div class="input__search">
+                      <div class="awesomplete">
+                        <input placeholder="От, л.с." id="power_id" class="widget__input widget-input_left" role="combobox" min="0">
+                      </div>
+                      <div class="awesomplete">
+                        <input placeholder="До, л.с."  id="power_id" class="widget__input awesomplete widget-input_right" role="combobox" min="0">
+                      </div>
+                    </div>
+                  </div>
+                </div><!--search__widget-->
+              </div>
+            </div><!--extra__search-->
 
           </div><!--auto_search-->
 
