--- a/webkirill/index.html
+++ b/webkirill/index.html
@@ -24,7 +24,7 @@
 
             <nav class="nav" id="nav">
                 <a class="nav__link" href="#" data-scroll="#projects">Projects</a>
-                <a class="nav__link"  href="#"  data-scroll="#contact">Contact</a>
+                <a class="nav__link"  href="#"  data-scroll="#contact">Contacts</a>
             </nav>
 
             <button class="nav-toggle" id="nav_toggle" type="button">
@@ -110,7 +110,7 @@
     <div class="container">
         <div class="section__header">
             <h2 class="section__title">
-                My Contact</h2> 
+                My Contacts</h2> 
                          
         </div><!-- section__header -->
 
@@ -139,6 +139,7 @@
                 <div class="picture__info">
                     <div class="picture__name">Kirill Seliutin</div>
                     <div class="picture__prof">Web Developer</div>
+                    <div class="picture__number">Number: <a href=""> +38268140290</a></div>
                 </div>
 
             </div><!-- pictures__item -->
