--- a/monte-i/index.html
+++ b/monte-i/index.html
@@ -215,6 +215,7 @@
             <h1 class="monte">Monte-i.com</h1>
           </a>
         </div>
+        <marquee class="marqu" direction="right">Work in progress</marquee>
       </div><!--header_inner-->
     </div><!--container-->
   </div><!-- head -->
